# seekr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  docs.json  suggestions.md
.github/workflows/: ci.yml
docs/: agent.md  agent.mdx  architecture.mdx  config.json  configuration.md  configuration.mdx  custom-skills.mdx  getting-started.mdx  index.md  index.mdx  installation.md  installation.mdx  mcp.mdx  schema.mdx  tools.md  tools.mdx  ui.md  ui.mdx
docs/releases/: v0.2.0.md
src/: app.rs  app_state.rs  config.rs  doctor.rs  errors.rs  event_handler.rs  lib.rs  main.rs  manager.rs  session.rs
src/agent/: loop.rs  mod.rs  system_prompt.rs
src/api/: anthropic.rs  client.rs  gemini.rs  mod.rs  openai.rs  provider.rs  stream.rs  types.rs
src/daemon/: client.rs  server.rs
src/lsp/: client.rs  manager.rs  mod.rs
src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src/tools/: agent.rs  file_edit.rs  lsp.rs  mcp.rs  mcp_prompt.rs  mcp_resource.rs  mod.rs  parser.rs  review.rs  shell.rs  task.rs  web.rs
src/ui/: chat.rs  input.rs  layout.rs  menu.rs  mod.rs  render.rs  setup.rs  status.rs  syntax.rs  tasks.rs  title.rs
tests/: config_tests.rs  integration_tests.rs
