[package]
name = "seekr"
version = "0.1.0"
edition = "2021"
description = "AI Agent Manager - Terminal UI powered by DeepSeek"
license = "MIT"

[[bin]]
name = "seekr"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (optional, for debug)
tracing = "0.1"
tracing-subscriber = "0.3"

# For streaming SSE parsing
futures = "0.3"
tokio-stream = "0.1"

# For web fetching tool
scraper = "0.22"

# For unique IDs
uuid = { version = "1", features = ["v4"] }
