[package]
name = "seekr"
version = "0.2.1"
edition = "2021"
description = "AI Agent Manager - Terminal UI powered by DeepSeek"
license = "Polyform-Prosperity-1.0.0"

[lib]
name = "seekr"
path = "src/lib.rs"

[[bin]]
name = "seekr"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (optional, for debug)
tracing = "0.1"
tracing-subscriber = "0.3"

# For streaming SSE parsing
futures = "0.3"
tokio-stream = "0.1"

# For web fetching tool
scraper = "0.22"

# For unique IDs
uuid = { version = "1", features = ["v4"] }

# For timestamps
chrono = { version = "0.4", features = ["serde"] }

# For async traits
async-trait = "0.1"
colored = "3"
shellexpand = "3"
arboard = "3.4.1"
syntect = "5.3.0"
keyring = "3.6.3"
url = "2.5.8"
semver = "1.0.27"

[dev-dependencies]
tempfile = "3"
