[package]
name = "seekr"
version = "0.3.0"
edition = "2024"
description = "Async Agentic System Operator"
license = "Polyform-Prosperity-1.0.0"

[lib]
name = "seekr"
path = "src/lib.rs"

[[bin]]
name = "seekr"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (optional, for debug)
tracing = "0.1"
tracing-subscriber = "0.3"

# For streaming SSE parsing
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# For web fetching tool
scraper = "0.22"

# For unique IDs
uuid = { version = "1", features = ["v4"] }

# For timestamps
chrono = { version = "0.4", features = ["serde"] }

# For async traits
async-trait = "0.1"
colored = "3"
shellexpand = "3"
arboard = "3.4.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig", "parsing", "dump-load", "html"] }
keyring = "3.6.3"
url = "2.5.8"
semver = "1.0.27"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io"] }
reqwest-eventsource = "0.6.0"

[dev-dependencies]
tempfile = "3"
